2023-11-04T16:15:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6755905149 # 1346
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
* notice: last 14d: unq all: 2 41
* notice: prev accum: outdated-unq outdated-all / unq all: 556 946 / 577 988
* notice: next accum: outdated-unq outdated-all / unq all: 556 946 / 577 989
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-21 2023-11-04]

2023-11-04T08:15:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6753717716 # 1345
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
* notice: last 14d: unq all: 2 41
* notice: prev accum: outdated-unq outdated-all / unq all: 556 946 / 576 987
* notice: next accum: outdated-unq outdated-all / unq all: 556 946 / 577 988
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-11-04]

2023-11-04T01:00:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6751736844 # 1344
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
* notice: last 14d: unq all: 2 40
* notice: prev accum: outdated-unq outdated-all / unq all: 556 946 / 576 986
* notice: next accum: outdated-unq outdated-all / unq all: 556 946 / 576 987
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2023-10-21 2023-11-03]

2023-11-03T16:18:19Z: