@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-23T01:01:16Z",
-  "count" : 3,
+  "timestamp" : "2023-11-05T01:05:36Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
