@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2023-11-04T16:15:55Z",
-  "count_outdated" : 946,
-  "uniques_outdated" : 556,
+  "timestamp" : "2023-11-05T01:05:36Z",
+  "count_outdated" : 949,
+  "uniques_outdated" : 557,
   "count" : 989,
   "uniques" : 577,
   "clones" : [
     {
-      "timestamp": "2023-10-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2023-10-22T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "count_decinc": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
