@@ -1,15 +1,10 @@
 {
-  "count": 41,
+  "count": 39,
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2023-10-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-10-22T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
