@@ -1,3 +1,12 @@
+2023-11-05T01:05:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6758262763 # 1347
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-05
+* notice: last 14d: unq all: 2 39
+* notice: prev accum: outdated-unq outdated-all / unq all: 556 946 / 577 989
+* notice: next accum: outdated-unq outdated-all / unq all: 557 949 / 577 989
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -1 / 1 2
+* notice: removed / changed dates: [2023-10-21] / [2023-10-22]
+
 2023-11-04T16:15:55Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6755905149 # 1346
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
